@@ -314,6 +314,7 @@ void BuddyShared::addContact(const Contact &contact)
 
 	emit contactAdded(contact);
 
+	connect(contact, SIGNAL(priorityUpdated()), &changeNotifier(), SLOT(notify()));
 	changeNotifier().notify();
 }
 
@@ -323,6 +324,8 @@ void BuddyShared::removeContact(const Contact &contact)
 
 	if (!contact || !Contacts.contains(contact))
 		return;
+
+	disconnect(contact, SIGNAL(priorityUpdated()), &changeNotifier(), SLOT(notify()));
 
 	emit contactAboutToBeRemoved(contact);
 	Contacts.removeAll(contact);
